# light-embed

./: pyproject.toml
examples/: example_jina_v3.py
light_embed/modules/: ort_text.py
