# pyproject.toml

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["light_embed*"] # <-- this changed

[project]
name = "light-embed"
version = "1.0.7"
description = "Fast and Lightweight Text Embedding"
readme = "README.md"
authors = [{ name = "Binh Nguyen", email = "binhcode25@gmail.com" }]
maintainers = [{name = "Binh Nguyen", email = "binhcode25@gmail.com"}]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "numpy==2.3.1",
    "huggingface_hub==0.25.2",
    "onnxruntime==1.22.0",
    "tokenizers==0.21.1"
]

[project.urls]
Homepage = "https://github.com/nguyenthaibinh/light-embed"
Repository = "https://github.com/nguyenthaibinh/light-embed"
